jepsen.tests.cycle: wr-orders identifies cycles due to write-read paths